--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/material": "^5.6.4",
     "next": "12.1.5",
     "react": "18.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
